# Task_set_simulator_PP_Lab3

./: CMakeLists.txt  main.cpp
include/: batch_runner.hpp  csv_export.hpp  job.hpp  metrics.hpp  scheduler.hpp  simulator.hpp  task.hpp  taskset_generator.hpp  time_utils.hpp
